<resources>
    <string name="app_name">All PDF Reader</string>

    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="path_empty">Path empty</string>
    <string name="pdf_night_mode">Night mode (Beta)</string>
    <string name="beta">Beta</string>
    <string name="continuous">Continuous</string>
    <string name="orientation">Orientation</string>
    <string name="goto_page">Go to page</string>
    <string name="enter_password">Enter password</string>
    <string name="please_input_password">Please input a password!</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="cant_open_file">Can\'t open file</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="could_parse_data">Couldn\'t parse data in intent</string>
    <string name="password_error">Password error</string>`
    <string name="enter_page_no">Enter page number</string>
    <string name="not_continuous">Not Continuous</string>
    <string name="enter_search_name">Search...</string>
    <string name="brush">Brush</string>
    <string name="delete">Delete</string>
    <string name="check_page">1 page</string>
    <string name="view">View</string>
    <string name="convert_success">Convert successfully!</string>
    <string name="convert_failed">Failed to convert</string>
    <string name="convert_message">Sorry, an unknown error occurred during the conversion</string>
    <string name="view_setting">View settings</string>
    <string name="vertical">Vertical</string>
    <string name="hortizontal">Hortizontal</string>
    <string name="enable_scrolling">Enable Scrolling</string>
    <string name="night_mode">Night Mode (Beta)</string>
    <string name="landscape">Switch to landscape</string>
    <string name="page_style">Page Style</string>
    <string name="page_count">Page count</string>
    <string name="page_color">Page Color</string>
    <string name="insert_blank_pages">Insert blank pages</string>
    <string name="blank">Blank</string>
    <string name="line">Line</string>
    <string name="grid">Grid</string>
    <string name="follow_previous">Follow previous</string>
    <string name="original">Original</string>
    <string name="apply_selected">Apply to selected</string>
    <string name="graph">Graph</string>
    <string name="copy">Copy</string>
    <string name="strike_throught">Strike throught</string>
    <string name="high_light">High light</string>
    <string name="underline">Unline</string>
    <string name="note">Note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="document_has_changes_save_them">Document has changes. Save them?</string>
    <string name="copyed">Text copied</string>
    <string name="line_thickness">Line thickness</string>
    <string name="transparency">Transparency</string>
    <string name="color">Color</string>
    <string name="choose_color">Choose color</string>
    <string name="page_by_page">Page by page</string>
    <string name="add_favorite">Add to favorite</string>
    <string name="add_password">Add password</string>
    <string name="rename">Rename</string>
    <string name="add_bookmask">Add Bookmask</string>
    <string name="print">Print</string>
    <string name="detail">Detail</string>
    <string name="remove_password">Remove password</string>
    <string name="add_password_error">Add password error</string>
    <string name="add_password_success">Add password successfully</string>
    <string name="remove_password_error">Remove password error</string>
    <string name="remove_password_success">Remove password successfully</string>
    <string name="print_failed">Print failed</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="properties">Properties</string>
    <string name="not_empty">%s not empty</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="remove_bookmask">Remove bookmask</string>
    <string name="all_bookmark">Bookmask</string>
    <string name="Thumbnail">Thumbnail</string>
    <string name="outline">Outline</string>
    <string name="cant_open_fuction">Can\'t open function</string>
    <string name="no_outline">No outline</string>
    <string name="page">Page %s</string>
    <string name="no_bookmark">No bookmask</string>
    <string name="del_message">Are you sure you want to delete \"%s.pdf\" ?</string>
    <string name="remove_from_fav">Remove from Favourite</string>
    <string name="add_in_fav">Add to favourite</string>
    <string name="rate_app">Rate app</string>
    <string name="rate_app_content">Tell others what you think about this app</string>
    <string name="rate_app_now">Rate now</string>
    <string name="remind_later">Remind me later</string>
    <string name="thanks_for_rate">Thanks for rate us!!!</string>
    <string name="add_signature">Add signature</string>
    <string name="signature">Sign</string>
    <string name="no_signature">No Signature</string>
    <string name="create_signature">Create a new Signature</string>
    <string name="delete_signature">Are you sure you want to delete this Signature?</string>
    <string name="add_signature_success">Add signature successfully</string>
    <string name="signature_empty">Signature empty</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="signature_pdf">Sign PDF</string>
    <string name="set_password">Set password</string>
    <string name="add_watermark">Add Watermark</string>
    <string name="extract_image">Extract images</string>
    <string name="delete_file_2">Delete this file</string>
    <string name="add_watermark_success">Add watermark successfully</string>
    <string name="edit">Edit</string>
    <string name="file_name">File Name</string>
    <string name="path">Path</string>
    <string name="last_modified">Last modified</string>
    <string name="size">Size</string>
    <string name="add_text">Add Text</string>
    <string name="font">Font</string>
    <string name="setting">Setting</string>
    <string name="lib_add_image">Add image</string>
    <string name="add_image">Add image</string>
    <string name="apply_backup_file">Do you want to use the file before editing?</string>
    <string name="intent_label_pdf_sign">PDF signatures</string>
    <string name="accept_all_file_permission_edit">Please allow full file access to use all features.</string>
    <string name="accept_all_file_permission_edit2">To edit and save files, please allow full file access.</string>
    <string name="choose_word">Hold and drag to select the text to operate on</string>
    <string name="complete_the_operation">Tap here to complete the operation</string>
</resources>