<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/_12sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_minus8sdp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/file_icon"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pdf_custom" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/tv_create_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/file_icon"
            app:layout_constraintTop_toTopOf="@id/file_icon"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="EllipsizeMaxLines"
            tools:text="Title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/file_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Create on" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line_color"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/func_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/item_view">

        <FrameLayout
            android:id="@+id/layout_native"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frNativeAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_edit"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/lib_ic_edit"
            app:fvTitle="@string/edit" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_go_to_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/lib_ic_go_to_page"
            app:fvTitle="@string/goto_page" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_continuous_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/lib_ic_continuous"
            app:fvTitle="@string/continuous" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_night_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:fvIcon="@drawable/lib_ic_night_mode"
            app:fvTitle="@string/pdf_night_mode" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/lib_ic_tools"
            app:fvTitle="@string/tools" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:fvIcon="@drawable/lib_ic_note"
            app:fvTitle="@string/note" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/lib_ic_thumbnail"
            app:fvTitle="@string/Thumbnail" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:fvIcon="@drawable/lib_ic_outline"
            app:fvTitle="@string/outline" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:fvIcon="@drawable/ic_signature"
            app:fvTitle="@string/add_signature" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/lib_ic_share"
            app:fvTitle="@string/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/func_commons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/func_details">

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_add_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:fvIcon="@drawable/lib_ic_add_favorite"
            app:fvTitle="@string/add_favorite" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_printer_detail"
            app:fvTitle="@string/print" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/lib_ic_setting"
            android:visibility="gone"
            app:fvTitle="@string/setting" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:fvIcon="@drawable/lib_ic_delete"
            app:fvTitle="@string/delete" />

        <com.ezteam.ezpdflib.widget.ItemFuncView
            android:id="@+id/func_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_details"
            app:fvTitle="@string/detail" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>