<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:padding="@dimen/_12sdp">

        <LinearLayout
            android:id="@+id/func_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/layout_native"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/frNativeAds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_brush_note"
                android:visibility="gone"
                app:fvTitle="@string/rename" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:visibility="gone"
                android:id="@+id/func_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_sign"
                app:fvTitle="@string/signature_pdf" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_set_password"
                app:fvTitle="@string/set_password" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_watermark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_watermark"
                app:fvTitle="@string/add_watermark" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:visibility="gone"
                android:id="@+id/func_add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_watermark"
                app:fvTitle="@string/add_image" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_extract_iamge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_extract_images"
                app:fvTitle="@string/extract_image" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_delete_note"
                app:fvTitle="@string/delete_file_2" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>