<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/background_color"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <LinearLayout
            android:id="@+id/func_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">
            <FrameLayout
                android:id="@+id/layout_native"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/frNativeAds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_brush"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_brush_note"
                app:fvTitle="@string/brush" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_unline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_underline_note"
                app:fvTitle="@string/underline" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_hightlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_hightlight_note"
                app:fvTitle="@string/high_light" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_stricke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_strickethought_note"
                app:fvTitle="@string/strike_throught" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_copy_note"
                app:fvTitle="@string/copy" />

            <com.ezteam.ezpdflib.widget.ItemFuncView
                android:id="@+id/func_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fvIcon="@drawable/lib_ic_delete_note"
                app:fvTitle="@string/delete" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>