<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@color/tokenBlack70">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/lib_bg_color_f6f7f8_radius_5"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/textDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ll_input_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:hintTextColor="@color/text_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <EditText
                android:id="@+id/edt_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/text_color"
                tools:hint="@string/enter_password">

                <requestFocus />
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_input_text">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                style="@style/textDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textColor="@color/text_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ok"
                style="@style/textDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/_8sdp"
                android:text="@string/ok"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>