<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_dialog_background"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_setting"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/icon_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/vertical"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:fontFamily="sans-serif" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/icon_hortizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/hortizontal"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:fontFamily="sans-serif" />
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE"
            android:layout_marginBottom="@dimen/_12sdp" />

        <!-- Setting item: Enable Scrolling -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/icon_scrolling"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/enable_scrolling"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:fontFamily="sans-serif" />

            <Switch
                android:id="@+id/switch_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Setting item: Night Mode -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/icon_night_mode"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/night_mode"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:fontFamily="sans-serif" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/customSwitch"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="16dp"
                android:track="@drawable/custom_switch_track"
                android:thumb="@drawable/custom_switch_thumb"
                android:showText="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/landscape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/icon_landscape"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/landscape"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:fontFamily="sans-serif" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>
